# x402-conformance

./: .env.example  .gitignore  .x402-conformance.example.toml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml  report.schema.json
.github/: upstream-reviewed-commit
.github/workflows/: ci.yml  supply-chain.yml
docs/: KNOWN-ISSUES.md  README.md  REVIEW-HANDOFF.md  SETUP-onchain-day.md  active-checks-2026-06-10.md  architecture.md  calibration-2026-06-09.md  conformance-catalog.md  design-extended-schemes.md  facilitator-checks-2026-06-10.md  jp402-extension-placement-2026-06-29.md  reporting-and-robustness-2026-06-12.md  supply-chain.md  support-matrix.md  testcase-integration-analysis.md  threat-model-mapping.md  upstream-issue-bazaar-method.md  upstream-issue-silent-402.md  verify-new-features.md
docs/history/: calibration-2026-06-09.md  onchain-2026-06-11.md  reporting-and-robustness-2026-06-12.md  verify-new-features.md
onchain/: README.md
onchain/src/: MockUSDC.sol
onchain/test/: MockUSDC.t.sol
requirements/: ci.txt
src/x402_conformance/: __init__.py  active.py  cli.py  diff.py  jp402.py  models.py  payload_builder.py  probe.py  redaction.py  report.py  run_record.py  runner.py  safety.py  scan.py  svm.py  svm_harness.py  svm_verify.py
src/x402_conformance/checks/: __init__.py  base.py  discovery.py  facilitator.py  handshake.py  negative.py  payment.py  payment_required.py  svm_facilitator.py  timing.py
tests/: conftest.py  test_accepts_overspec.py  test_active_retry.py  test_cli.py  test_cli_config.py  test_cli_exit_codes.py  test_developer_report.py  test_diff.py  test_discovery.py  test_error_reason_drift.py  test_eth_account_pin.py  test_explain.py  test_facilitator.py  test_facilitator_absent_endpoints.py  test_facilitator_algorand_caip2.py  test_facilitator_algorand_deferral.py  test_facilitator_eoa.py  test_function_docs.py  test_handshake.py  test_jp402_unit.py  test_models.py  test_negative.py  test_new_checks.py  test_onchain_facilitator.py  test_openapi_notes.py  test_payload_builder.py  test_payment.py  test_payment_required.py  test_probe.py  test_registry.py  test_report.py  test_run_record.py  test_safety.py  test_sarif.py  test_scan.py  test_svm_builder.py  test_svm_facilitator.py  test_svm_foundation.py  test_svm_harness.py  test_svm_reference.py  (+4 more)
tests/fixtures/jp402/: live-402-envelope.json  openapi-discovery-x-jp402.json
tools/: calibration_target.py  check_function_docs.py  mock_facilitator.py  onchain_facilitator.py  onchain_smoke.py  verify_new_features.py
