[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x402-conformance"
version = "0.2.0"
description = "Black-box conformance and robustness test suite for x402 payment endpoints"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "moped2110" }]
keywords = ["x402", "payments", "conformance", "testing", "http-402"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/moped2110/x402-conformance"
Repository = "https://github.com/moped2110/x402-conformance"
Issues = "https://github.com/moped2110/x402-conformance/issues"

[project.optional-dependencies]
# Active payment-flow checks (RS-NEG/RS-SEC) need EIP-712 signing.
# eth-account is pinned <0.14: active.py depends on the 0.13 signing surface
# (a private-path import for EIP-191 hashing); a minor bump can move it. See
# tests/test_eth_account_pin.py, which fails loudly if that path relocates.
evm = [
    "eth-account>=0.13,<0.14",
]
# On-chain settlement checks (RS-PAY, FA-SET) additionally need an RPC client.
onchain = [
    "eth-account>=0.13,<0.14",
    "web3>=6.0",
]
# SVM (Solana) exact-scheme support: ATA derivation + partial-signed transaction
# building. Purely additive — no EVM path depends on this. See ../SOLANA-PLAN.md.
svm = [
    "solders>=0.21",
    "solana>=0.34",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    # Pinned exact: ruff's formatter output varies across releases, so an unpinned
    # CI ruff and a local ruff can disagree on `format --check` (skew). Bump deliberately.
    "ruff==0.15.20",
    "eth-account>=0.13,<0.14",
    "web3>=6.0",
    "jsonschema>=4.0",
    "solders>=0.21",
]
# Live calibration / verify-new-features tooling. tools/calibration_target.py is a
# reference target that validates payments with the REAL x402 SDK, so a green
# `--active`/verify run proves the suite against an independent oracle. Pins the
# SDK major so an upstream break surfaces here, not silently.
calibration = [
    "x402[evm]>=2.14,<3",
    "jsonschema>=4.0",
]

[project.scripts]
x402-conformance = "x402_conformance.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/x402_conformance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

# solders/solana ship partial type info; don't let missing stubs break strict mode.
[[tool.mypy.overrides]]
module = ["solders.*", "solana.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# The formatter (ruff format) owns line width, so E501 is intentionally NOT in
# the lint gate — it can't reflow long comments/spec-ref docstrings and would
# only produce noise. The lint gate is for real defects: undefined names,
# unsorted imports, bugbears, dead code, stale idioms.
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line length is the formatter's job, not a lint error
    "B008",   # Typer uses typer.Option/Argument(...) in defaults by design
    "UP042",  # Severity/Status deliberately (str, Enum) for stable .value semantics
]

[tool.ruff.lint.per-file-ignores]
# Imports follow an importorskip guard (eth-account / solders), so they can't be top-of-file.
"tests/test_payload_builder.py" = ["E402"]
"tests/test_svm_foundation.py" = ["E402"]
"tests/test_svm_builder.py" = ["E402"]
"tests/test_svm_tamper.py" = ["E402"]

[tool.coverage.run]
source = ["x402_conformance"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
